<resources>
    <string name="app_name" translatable="false">Passtick</string>
    <string name="qr_code">สแกน QR Code</string>
    <string name="collect">สะสมยอดลดพลาสติก</string>
    <string name="shop_title">ร้าน :</string>
    <string name="shop_name" translatable="false">Eat At Home</string>
    <string name="amount">จำนวณ (ชิ้น)</string>
    <string name="confirm">ยืนยัน</string>
    <string name="thanks">ขอบคุณที่รักสิ่งแวดล้อม</string>
    <string name="back_to_home">กลับสู่หน้าหลัก</string>
    <string name="ranking">การจัดอันดับ</string>
    <string name="shop">ร้านค้า</string>
    <string name="user">ผู้ใช้งาน</string>
    <string name="logo" translatable="false">logo</string>
    <string name="home_head">Passtick</string>
    <string name="total_money">ยอดเงินรวม</string>
    <string name="money_num">0</string>
    <string name="unit">บาท</string>
    <string name="reduce_plastic">จำนวนพลาสติกที่ลด</string>
    <string name="reduce_num">0</string>
    <string name="plastic_unit">ชิ้น</string>
    <string name="rank">Ranking</string>
    <string name="shoplist">ร้านค้า</string>
    <string name="user_ranking">การจัดอันดับ</string>
    <string name="_description">profile</string>
    <string name="shops_name">shop</string>
    <string name="nearby_shop">ร้านค้าที่อยู่ใกล้</string>
    <string name="test">test</string>
    <string name="username">userA</string>
    <string name="welcome">ยินดีต้อนรับ!</string>
    <string name="facebook_app_id">2520741398037132</string>
    <string name="fb_login_protocol_scheme">fb2520741398037132</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="shop_card_title">Cafe1</string>
    <string name="call">โทร :</string>
    <string name="phone_number">0123456789</string>
    <string name="login_recommend_text">เข้าสู่ระบบด้วย</string>
    <string name="login_welcome_text">ยินดีต้อนรับ</string>
</resources>
