<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/linear">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collect"
            android:textSize="35sp"
            android:layout_marginTop="32dp"
            android:textColor="@color/brown"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp">

            <TextView
                android:id="@+id/shop_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="66dp"
                android:layout_marginTop="72dp"
                android:text="@string/shop_title"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:layout_alignEnd="@+id/shop_title"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="-212dp"
                android:text="@string/shop_name"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:id="@+id/amount"
                android:layout_alignBottom="@+id/shop_title"
                android:layout_alignParentTop="true"
                android:layout_marginStart
                    ="50dp"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="-212dp"
                android:layout_marginBottom="-108dp"
                android:text="@string/amount"
                android:textSize="30sp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/amount"
                android:layout_alignParentTop="true"
                android:layout_marginStart="209dp"
                android:layout_marginTop="193dp"
                android:layout_marginEnd="-113dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="113dp"
                android:layout_marginBottom="159dp"
                android:width="200dp"
                android:backgroundTint="@android:color/holo_orange_light"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:textSize="30sp" />


        </RelativeLayout>



    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@android:color/holo_orange_light"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>